--- a/index.html
+++ b/index.html
@@ -34,66 +34,66 @@
                     <h1>Блог о творчестве, спорте, и образе жизни</h1>
                 </div>
         </header>
-
-
         <h3 class="text_trend">Сейчас в тренде</h3>
-            <section class="trend">
-                    <article class="section_trend">
-                        <div class="box garden">
-                            <div class="little_description">
-                                <div class="category">							    	
-                                    <ul class="category__items">
-                                        <li><a class="category__item" href="#0">lifestyle</a></li>
-                                        <li><a class="category__item" href="#0">interior</a></li>
-                                    </ul>
-                                </div>
-                                <div class="description">
-                                    <h2 class="description_text">Сейчас в тренде:Сад на подоконнике</h2>
-                                </div>															
-                            </div>
-                        </div>
-                        <div class="box cheese">
-                            <div class="little_description">
-                                <div class="category">							    	
-                                    <ul class="category__items">
-                                        <li><a class="category__item" href="#0">lifestyle</a></li>
-                                    </ul>
-                                </div>
-                                <div class="description">
-                                    <h2 class="description_text">Сыры на красивых картинках из интерекиа:Какие они на вкус?</h2>
-                                </div
-                            </div>
-                        </div>
-                        <div class="box moutins">
-                            <div class="little_description">
-                                <div class="category">							    	
-                                    <ul class="category__items">
-                                        <li><a class="category__item" href="#0">lifestyle</a></li>
-                                        <li><a class="category__item" href="#0">Travel</a></li>
-                                    </ul>
-                                </div>
-                                <div class="description">
-                                    <h2 class="description_text">Собираемся в первый поход в горы</h2>
-                                </div
-                            </div>
-                        </div>
-                        <div class=" box limons">
-                            <div class="little_description">
-                                <div class="category">							    	
-                                    <ul class="category__items">
-                                        <li><a class="category__item" href="#0">food</a></li>
-                                        <li><a class="category__item" href="#0">Health</a></li>
-                                    </ul>
-                                </div>
-                                <div class="description">
-                                    <h2 class="description_text">Сейчас в тренде:Сколько витамина с в Лимонах</h2>
-                                </div
-                            </div>
-                        </div>
-                    </article>
-            </section>
-        
-
+        <section class="trends">
+            <article class="trend first">
+                <div class="trend_text">
+                    <ul class="trend_teg">
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">lifestyle</a>
+                        </li>
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">interior</a>
+                        </li>
+                      </ul>
+                        <h2 class="trend_name">
+                          <a class="trend_link" href="#0">сейчас в тренде: сад на подоконнике</a>
+                        </h2>
+                </div>
+            </article>
+            <article class="trend second">
+                <div class="trend_text">
+                    <ul class="trend_teg">
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">food</a>
+                        </li>
+                      </ul>
+                        <h2 class="trend_name">
+                          <a class="trend_link" href="#0">Сыры на красивых  картинках из интернета: какие они на вкус ?</a>
+                        </h2>
+                </div>
+            </article>
+            <article class="trend third">
+                <div class="trend_text">
+                    <ul class="trend_teg">
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">lifestyle</a>
+                        </li>
+                        <li class="trend_teg_item">
+                            <a class="trend_teg_link" href="#0">travel</a>
+                          </li>
+                      </ul>
+                        <h2 class="trend_name">
+                          <a class="trend_link" href="#0">собираемся в первый поход в горы</a>
+                        </h2>
+                </div>
+            </article>
+            <article class="trend four">
+                <div class="trend_text">
+                    <ul class="trend_teg">
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">food</a>
+                        </li>
+                        <li class="trend_teg_item">
+                          <a class="trend_teg_link" href="#0">health</a>
+                        </li>
+                      </ul>
+                        <h2 class="trend_name">
+                          <a class="trend_link" href="#0">сейчас в тренде: сколько витамина C в лимонах?</a>
+                        </h2>
+                </div>
+            </article>
+        </section>
         <div class="list">
             <div class="page">
                 <div class="page-next">
