--- a/index.html
+++ b/index.html
@@ -432,11 +432,60 @@
                         </ul>
                     </nav>
                 </div>
-            </section>
-            
+            </section>  
         </div>
             </aside>               
                 </div>
+            <h3 class="text_shop">Наши изделия</h3>
+            <div class="shop">
+                <div class="row">
+                    <div class="card">
+                        <div class="product">
+                            <div class="image">
+                                <img src="img/shop-item-desk1.jpg" alt="подушка">
+                            </div>
+                            <div class="info">
+                                <h2 class="shop_title">Подушки на диван</h2>
+                                <p class="texts_shop">Набор из двух подушек с модными принтами. Видео о создании <a class="tut" href="#">здесь</a>.</p>
+                                <div class="price_buccet">
+                                    <span class="price">800р</span>
+                                    <button class="add_to_card"><span class="magas">В магазин</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="product">
+                            <div class="image">
+                                <img src="img/shop-item-desk2.jpg" alt="заяц">
+                            </div>
+                            <div class="info">
+                                <h2 class="shop_title">Кукла «Зайчик»</h2>
+                                <p class="texts_shop rabbit">Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена <a class="tut" href="#">весенняя серия постов</a> в блоге и несколько подкастов.</p>
+                                <div class="price_buccet">
+                                    <span class="price_two">3500р</span>
+                                    <button type="submit" class="add_to_card"><span class="magas">В магазин</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="product">
+                            <div class="image">
+                                <img src="img/shop-item-desk3.jpg" alt="рамка">
+                            </div>
+                            <div class="info">
+                                <h2 class="shop_title">Шестиугольная рамка</h2>
+                                <p class="texts_shop frame">Необычная рамка для украшения дома из видео <a class="tut" href="#">«Как сделать рамку из подручных средств за 30 минут»</a></p>
+                                <div class="price_buccet">
+                                    <span class="price_three">400р</span>
+                                    <button type="submit" class="add_to_card"><span class="magas">В магазин</span></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <footer>
             <address class="social-icon">
                 <ul>
